Fix meta description and contrast v2.

--- a/styles/base.css
+++ b/styles/base.css
@@ -33,6 +33,7 @@ body {
 
 header{
 background-color: var(--blueBackground);
+color: var(--lightText);
 }
 
 header, main {
